fix filter margin and tag-button alignment

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -302,11 +302,6 @@ a.tag {
     margin: .125rem .125rem;
     padding: 0.25rem;
 }
-
-.tags {
-    padding-bottom: 15px;
-    padding-top: 15px;
-}
 /* -------end Tags-------- */
 
 /* -------other-------- */
